Add read permissions for contents in workflow

--- a/.github/workflows/demo-reusable-caller-advanced.yml
+++ b/.github/workflows/demo-reusable-caller-advanced.yml
@@ -8,7 +8,8 @@ on:
     paths:
       - 'demos/reusable-workflows/**'
 
-permissions: {}
+permissions:
+  contents: read
 
 jobs:
   call-for-staging:
