--- a/.github/actions/setup-node-advanced/action.yml
+++ b/.github/actions/setup-node-advanced/action.yml
@@ -52,7 +52,7 @@ runs:
       if: steps.cache-deps.outputs.cache-hit != 'true'
       shell: bash
       run: |
-        if [ -f "package.json" ]; then
+        if [ ! -f "package.json" ]; then
           echo "Cache miss - installing dependencies..."
           npm ci || npm install
         else
