--- a/.github/workflows/demo-matrix-complex.yml
+++ b/.github/workflows/demo-matrix-complex.yml
@@ -1,9 +1,15 @@
 name: E2E - Browsers + "Browser Versions" (via Playwright version)
 
 on:
+  workflow_dispatch:
   push:
-    branches: [ main ]
-  pull_request:
+    branches:
+      - main
+    paths:
+      - 'demos/matrix-builds/**'
+
+permissions:
+  contents: read
 
 jobs:
   e2e:
