Rename workflow for matrix builds

--- a/.github/workflows/demo-matrix-complex.yml
+++ b/.github/workflows/demo-matrix-complex.yml
@@ -1,4 +1,4 @@
-name: E2E - Browsers + "Browser Versions" (via Playwright version)
+name: Demo 1: Matrix Builds - Complex (via Playwright version)
 
 on:
   workflow_dispatch:
