--- a/.github/workflows/demo-matrix-complex.yml
+++ b/.github/workflows/demo-matrix-complex.yml
@@ -43,6 +43,20 @@ jobs:
       - name: Install browsers + OS deps
         run: npx playwright install --with-deps ${{ matrix.browser }}
 
+      - name: Create Playwright config with projects
+        run: |
+          cat > playwright.config.ts <<'EOF'
+          import { defineConfig, devices } from '@playwright/test';
+
+          export default defineConfig({
+            projects: [
+              { name: 'chromium', use: { ...devices['Desktop Chrome'] } },
+              { name: 'firefox',  use: { ...devices['Desktop Firefox'] } },
+              { name: 'webkit',   use: { ...devices['Desktop Safari'] } },
+            ],
+          });
+          EOF        
+          
       - name: Run tests (single browser project)
         run: npx playwright test --project=${{ matrix.browser }}
 
