--- a/.github/workflows/demo-matrix-complex.yml
+++ b/.github/workflows/demo-matrix-complex.yml
@@ -54,8 +54,7 @@ jobs:
               { name: 'firefox',  use: { ...devices['Desktop Firefox'] } },
               { name: 'webkit',   use: { ...devices['Desktop Safari'] } },
             ],
-          });
-          EOF        
+          });EOF        
           
       - name: Run tests (single browser project)
         run: npx playwright test --project=${{ matrix.browser }}
